1999-01-21  Alexander Larsson  <alex@c125.ryd.student.liu.se>

	* app/app_procs.c:
	* objects/ER/er.c:
	* objects/UML/uml.c:
	* objects/network/network.c:
	* objects/standard/standard.c:
	Added versioning of object libraries.

	* app/create_object.c:
	Don't change tool when an object is created.
	
	* objects/network/network.c:

	* TODO:
	Update

1999-01-19  Alexander Larsson  <alla@lysator.liu.se>

	* configure.in:
	Updated gtk requirement to Gtk+ 1.1.13.

	* app/display.c:
	Always add one screenful of scrolling space on
	each side of a diagram window.

1999-01-19  Jeff Garzik  <jgarzik@pobox.com>

	* autogen.sh:
	Tell automake to auto-install missing files.

	* app/menus.c:
	Renamed deprecated Gtk+ function.

1999-01-16  Alexander Larsson  <alla@lysator.liu.se>

	* Makefile.am:
	* configure.in:
	* samples/Makefile.am:
	* samples/ER-demo.dia:
	* samples/UML-demo.dia:
	Added samples directory.
	Added samples for ER and UML.
	
	* app/commands.c:
	* app/disp_callbacks.c:
	* app/menus.c:
	Zoom is done by sqrt(2) instead of 2.
	Lots of more zoom options in the menu.

	* objects/ER/relationship.c:
	Relationships have 8 connectionpoints instead of 4.

	* objects/UML/class.c:
	UML class name font a bit smaller.
	Fixed stupid bug in the copy operation.
	
	* app/display.c:
	Displays are opened at 500x400 instead of 256x256.

	* app/load_save.c:
	Fixup of internal error message.

	* app/color_area.c:
	* app/diagram.c:
	* app/modify_tool.c:
	* lib/object.c:
	Removed debug printf's.
	
	* TODO (BUGS):
	Added new known bug.

1999-01-16  Alexander Larsson  <alla@lysator.liu.se>

	* app/interface.c:
	* app/menus.c:
	Fixed so accelerator groups work in all windows.
	Updated to new gtk function names.

	* TODO (BUGS):
	Removed fixed bug.

	* app/display.c:
	Updated to new gtk function names.
	Set sensitivity of the align menu items.	

	* objects/ER/pixmaps/Makefile.am:
	* objects/UML/pixmaps/Makefile.am:
	* objects/network/pixmaps/Makefile.am:
	Fix so that make dist works.
